fix: update contrast ratio of light theme focus indicator

--- a/packages/styles/variables.css
+++ b/packages/styles/variables.css
@@ -37,7 +37,7 @@
   --accent-primary-active: #316091;
   --accent-secondary: var(--gray-20);
   --accent-secondary-active: var(--gray-30);
-  --focus-light: #b51ad1;
+  --focus-light: #9215a8;
   --focus-dark: #eb94ff;
   --issue-critical: var(--accent-danger);
   --issue-serious: var(--accent-warning);
